Opened 14 years ago
Closed 14 years ago
#7189 closed bug (fixed)
linkcatkeys replaces binary file instead of adding a resourse to it
Reported by: | mr.Noisy | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Locale Kit | Version: | R1/Development |
Keywords: | linkcatkeys resource catalog | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Hello!
Running this:
linkcatkeys -tr -o objects.x86-gcc4-debug/WeatherApp -l ru -s application/x-vnd-WeatherApp locales/ru.catkeys
replaces WeatherApp binary with catalog contents.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev42432. Sorry for the long delay.