Fix #7189 : linkcatkeys erases file with plain catalog data instead of writing it as a resource. Was only a missing break in switch/case.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42432 a95241bf-73f2-0310-859d-f6bbb57e9c96